--- a/site.html
+++ b/site.html
@@ -1,71 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/normalize.css">
-    <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="mixin/mixin.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style/normalize.css" />
+    <link rel="stylesheet" href="style/style.css" />
     <title>vikipedi</title>
-</head>
+  </head>
 
-<body class=mainer>
+  <body class="mainer">
     <div class="container">
-        <header class=header>
-            <h1>Vikipedi</h1>
-        </header>
-        <hr width=70%>
-        <main class="main">
-            <nav>
-                <ul class="list">
-                    <li>Main page</li>
-                    <li>Contents</li>
-                    <li>Current events</li>
-                    <li>Donate</li>
-                    <li>About</li>
-                </ul>
-            </nav>
-            <div>
-                <img class="flags" src="photo/1573249458_938199_1573249380_5776162The_national_flag_o_OfeU6VR.jpg"
-                    alt="flags">
-                <div class="allimg">
-                    <div class="images"><img src="photo/president.jpg" alt="president">President</div>
-                    <div class="images2"><img src="photo/azerbaijan_regions_by_xumarov_d3a075i-fullview.jpg"
-                            alt="regions">Regions</div>
-                    <div class="images3"><img src="photo/Special_forces_azerbaijan.png" alt="army">Army</div>
-                    <div class="images4"><img
-                            src="photo/1573249458_938199_1573249380_5776162The_national_flag_o_OfeU6VR.jpg"
-                            alt="culture">Culture</div>
-                    <div class="images5"><img src="photo/shutterstock_449164447.jpg" alt="dishes">Dishes</div>
-                    <div class="images6"><img
-                            src="photo/1538563559_2118545_1538563465_1725879HubHeaderBakuTrave_muFygtx.jpg"
-                            alt="Tourism">Tourism</div>
+      <header class="header">
+        <h1>Vikipedi</h1>
+      </header>
+      <hr width="70%" />
+      <main class="main">
+        <nav>
+          <ul class="list">
+            <li>Main page</li>
+            <li>Contents</li>
+            <li>Current events</li>
+            <li>Donate</li>
+            <li>About</li>
+          </ul>
+        </nav>
 
+        <div class="flag">
+          <img
+            class="flags"
+            src="photo/1573249458_938199_1573249380_5776162The_national_flag_o_OfeU6VR.jpg"
+            alt="flags"
+          />
 
+            <span>Flags</span>
+        </div>
 
-
-                </div>
-        </main>
-        <hr width="70%">
-        <footer class="footer">
-            <div class="allus">
-                <div class="contact"><a href="" style="color:black">CONTACT</a><span>/</span>
-                    <a href="">EMAIL</a></div>
-                <div class="about"><a href="">ABOUT US</a></div>
-                <div class="social"><a target="_blank" href="https://facebook.com">FACEBOOK</a><span>/</span>
-                    <a target="_blank" href="https://twitter.com">TWITTER</a><span>/</span>
-                    <a target="_blank" href="https://https://instagram.com.com">INSTAGRAM</a></div>
-            </div>
-            <div class="final">
-                <strong>Vikipedi</strong><br>
-                <small>library</small>
-            </div>
-        </footer>
+        <div class="allimg">
+          <div class="images">
+            <img src="photo/president.jpg" alt="president" />
+            <span>President</span>
+          </div>
+          <div class="images">
+            <img
+              src="photo/azerbaijan_regions_by_xumarov_d3a075i-fullview.jpg"
+              alt="regions"
+            />
+            <span>Regions</span>
+          </div>
+          <div class="images">
+            <img src="photo/Special_forces_azerbaijan.png" alt="army" />
+            <span>Army</span>
+          </div>
+          <div class="images">
+            <img
+              src="photo/azerbaijan-musicians.jpg"
+              alt="culture"
+            />
+            <span>Culture</span>
+          </div>
+          <div class="images">
+            <img src="photo/shutterstock_449164447.jpg" alt="dishes" />
+            <span>Dishes</span>
+          </div>
+          <div class="images">
+            <img
+              src="photo/1538563559_2118545_1538563465_1725879HubHeaderBakuTrave_muFygtx.jpg"
+              alt="Tourism"
+            />
+            <span>Tourism</span>
+          </div>
+        </div>
+      </main>
+      <hr width="70%" />
+      <footer class="footer">
+        <div class="allus">
+          <div class="contact">
+            <a href="" style="color: black">CONTACT</a>
+            <span>/</span>
+            <a id="last-child" href="">EMAIL</a>
+          </div>
+          <div class="about"><a href="">ABOUT US</a></div>
+          <div class="social">
+            <a target="_blank" href="https://facebook.com">Facebook</a
+            ><span>/</span>
+            <a target="_blank" href="https://twitter.com">Twitter</a
+            ><span>/</span>
+            <a target="_blank" href="https://https://instagram.com.com"
+              >Instagram</a
+            >
+          </div>
+        </div>
+        <div class="final">
+          <strong>Vikipedi</strong><br />
+          <small>library</small>
+        </div>
+      </footer>
     </div>
-
-
-
-</body>
-
+  </body>
 </html>
